--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,15 +1,20 @@
-# fly.toml app configuration file generated for short1url-api on 2023-10-21T22:51:32+07:00
+# fly.toml app configuration file generated for onelink on 2024-08-10T20:06:17+07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "short1url-api"
-primary_region = "sin"
+app = 'onelink'
+primary_region = 'sin'
+
+[build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  size = 'shared-cpu-1x'
