--- a/.dockerignore
+++ b/.dockerignore
@@ -12,10 +12,10 @@ client/dist
 
 \*/.env.example
 
-app/.gitignore
-app/Dockerfile
-app/fly.toml
-app/.dockerignore
+api/.gitignore
+api/Dockerfile
+api/fly.toml
+api/.dockerignore
 
 # Exclude version control system files
 
@@ -30,5 +30,5 @@ docs
 # Exclude any other files or directories specific to your project
 
 .github
-
+.circleci
 nginx
