--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,13 @@ services:
     restart: always
 
   client:
-    image: thuongtruong1009/short1url-client
+    image: thuongtruong1009/onelink-client
     container_name: client
     build:
       context: ./client
       dockerfile: Dockerfile
     env_file:
-      - ./client/.env
+      - ./client/.env.dev
     ports:
       - "3000:3000"
     environment:
@@ -32,13 +32,13 @@ services:
     restart: always
 
   api:
-    image: thuongtruong1009/short1url-api
+    image: thuongtruong1009/onelink-api
     container_name: api
     build:
       context: ./api
       dockerfile: Dockerfile
     env_file:
-      - ./api/.env
+      - ./api/.env.dev
     ports:
       - "8080:8080"
     environment:
