--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for onelink on 2024-08-10T20:06:17+07:00
+# fly.toml app configuration file generated for nolink on 2024-08-10T20:06:17+07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'onelink'
+app = 'nolink'
 primary_region = 'sin'
 
 [build]
