--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,14 +12,14 @@ RUN npm run build
 
 FROM node:18-alpine AS production
 
-LABEL "website.name"="onelink"
+LABEL "website.name"="nolink"
 LABEL "maintainer"="thuongtruong109"
 LABEL "org.opencontainers.image.authors"="Tran Nguyen Thuong Truong <thuongtruongofficial@gmail.com>"
 LABEL "org.opencontainers.image.version"="1.0"
 LABEL "org.opencontainers.image.description"="Ship your link in an easier way"
 LABEL "org.opencontainers.image.licenses"="MIT"
-LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong109/onelink/api"
-LABEL "org.opencontainers.image.documentation"="https://github.com/thuongtruong109/onelink/blob/main/README.md"
+LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong109/nolink/api"
+LABEL "org.opencontainers.image.documentation"="https://github.com/thuongtruong109/nolink/blob/main/README.md"
 
 WORKDIR /app
 
