fix: env loader

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,9 +1,9 @@
-APP_PORT=":8080"
+os.Getenv("APP_PORT")=":8080"
 
-DOMAIN="localhost${APP_PORT}"
-DOMAIN_RETURN="http://${DOMAIN}"
+os.Getenv("DOMAIN")="localhost${os.Getenv("APP_PORT")}"
+os.Getenv("DOMAIN")_RETURN="http://${os.Getenv("DOMAIN")}"
 
-API_QUOTA=10
+os.Getenv("API_QUOTA")=10
 
-DB_ADDR="localhost:6379"
-DB_PASS=""
+os.Getenv("DB_ADDR")="localhost:6379"
+os.Getenv("DB_PASS")=""
