--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,7 +36,7 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - DB_ADDR=redis:6379
+      - os.Getenv("DB_ADDR")=redis:6379
     depends_on:
       - redis
     networks:
