--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DOMAIN_RETURN=localhost:81/s
+      - os.Getenv("DOMAIN")_RETURN=localhost:81/s
     depends_on:
       - redis
     networks:
